--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 </head>
 
 <body>
-  <div class="dice-container">
-    <div class="dice">
-      <div class="dice-dot"></div>
-    </div>
-  </div>
+  <div class="dice-container"></div>
   <button type="button" class="btn-roll-dice">Roll Dice</button>
   <script src="script.js"></script>
 
